--- a/resources/assets/sass/error.scss
+++ b/resources/assets/sass/error.scss
@@ -45,7 +45,8 @@
   transition: opacity .2s ease-in-out;
   .modalError{
     position: relative;
-    width: 60%;
+    width: 100%;
+    max-width: 760px;
     pointer-events: auto;
 
   }
